# JSON_Expression_Parser

./: .gitignore  CMakeLists.txt  README.md  build.sh  task.md  test_eval.sh
include/json_parser/: json.hpp  jsonEvaluator.hpp  jsonParser.hpp
src/: json.cpp  jsonEvaluator.cpp  jsonParser.cpp  main.cpp
test_data/: numbers.json
